healthcheck in accounting service
