# accounting/src/server/app.ts
@@ -10,6 +10,7 @@ import helmet from "helmet"
 import cors from "cors"
 import { createBaseService } from "../controller/base-service-builder"
 import { BaseService } from "../controller"
+import { healthRoute } from "./health"
 
 
 export type ExpressExtended = express.Express & { komunitin: { service: BaseService } }
@@ -41,6 +42,15 @@ export const setupApp = async (expressApp: express.Express) => {
     exposedHeaders: ['Content-Disposition']
   }))
 
+  // Logger
+  app.use(httpLogger)
+  
+  // Controller
+  const service = await createBaseService()
+  app.komunitin = { service }
+
+  app.get('/health', healthRoute(service))
+
   // Express middlewares
   app.use(express.json({
     type: ['application/vnd.api+json', 'application/json']
@@ -53,13 +63,6 @@ export const setupApp = async (expressApp: express.Express) => {
     next()
   })
 
-  // Logger
-  app.use(httpLogger)
-
-  // Controller
-  const service = await createBaseService()
-  app.komunitin = { service }
-  
   // Routes
   app.use("/", getRoutes(service))
   app.use("/", getCCRoutes(service))
@@ -76,5 +79,3 @@ export const setupApp = async (expressApp: express.Express) => {
 export const closeApp = async (app: ExpressExtended) => {
   await app.komunitin.service.stop()
 }
-
-
